Testing school server for git push. Made changed to about me page, making two boxes.

--- a/htmlclasses/main.css
+++ b/htmlclasses/main.css
@@ -62,4 +62,11 @@ body {
 .mydescription {
     height: 675px;
     margin: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+.descriptioncontent {
+    width: 45%;
+    background-color: #EEEEEE;
+    padding: 10px;
 }
