--- a/htmlclasses/main.css
+++ b/htmlclasses/main.css
@@ -27,7 +27,6 @@ body {
     background-color: #888888;
 }
 .mylink {
-    display: block;
     background-color: #0c6dc4;
     color: #ffffff;
     padding: 10px;
@@ -35,13 +34,15 @@ body {
     border-radius: 3px;
     margin-top: 3px;
     text-decoration: none;
+    width: 100%;
+    font-size: 11pt;
 }
 
 .formcontainer{
     width: 25%;
     margin: 30px auto;
     border: 1px solid;
-    padding: 20px;
+    padding: 18px;
     border-radius: 7px;
     background-color: #eeeeee;
 }
@@ -49,6 +50,7 @@ body {
 .row{
     display: flex;
     justify-content: space-between;
+    margin:2px;
 }
 .mytitle {
     font-size: 30px;
