--- a/htmlclasses/main.css
+++ b/htmlclasses/main.css
@@ -14,12 +14,13 @@ body {
     background-color: #FFF;
     padding: 15px;
     border-radius: 5px;
+    height: 100%;
 }
 .navsection {
     display: flex;
     width: 96%;
     justify-content: space-between;
-    background-color: dimgray;
+    background-color: #808080;
     border-radius: 10px;
     margin: 0 auto;
     padding: 15px;
@@ -111,7 +112,7 @@ body {
     margin: 15px;
     display: flex;
     justify-content: space-around;
-
+    height: 75%;
 
 }
 
@@ -132,20 +133,19 @@ body {
     width: 35%;
     font-size: 14px;
     -webkit-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
-    box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
-
+    -moz-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.20);
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.20);
 
 }
 
 .projectbox {
-    background-color: #EEEEEE;
+    background-color: #089de3;
+    color: #FFF;
     padding: 10px;
-    margin: 0 0 5px 0;
+    margin: 0 0 15px 0;
     width: 45%;
     font-size: 14px;
     -webkit-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
-    box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
-
+    box-shadow: 1px 1px 1px rgba(0,0,0,.2);
 }
