--- a/htmlclasses/main.css
+++ b/htmlclasses/main.css
@@ -9,7 +9,7 @@ body {
 
 }
 .container {
-    width: 80%;
+    width: 85%;
     margin: 0 auto;
     background-color: #FFF;
     padding: 15px;
@@ -21,10 +21,16 @@ body {
     width: 96%;
     justify-content: space-between;
     background-color: #808080;
-    border-radius: 10px;
+    border-radius: 2px;
     margin: 0 auto;
-    padding: 15px;
-    }
+    padding: 10px;
+    box-shadow: 1px 2px 1px rgba(0,0,0,.2);
+
+}
+.projecttitle {
+    padding: 0;
+    margin: 0;
+}
 .navsection a {
     color: #FFF;
     text-decoration: none;
@@ -60,7 +66,7 @@ body {
 }
 .mytitle {
     font-size: 30px;
-    margin: 22px 0 40px 15px;
+    margin: 22px 15px 40px 15px;
     display: flex;
     justify-content: space-between;
 
@@ -96,11 +102,11 @@ body {
 
     background-color: #EEEEEE;
     padding: 10px;
-    width: 30%;
+    width: 35%;
     font-size: 14px;
     -webkit-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
-    box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
+    box-shadow: 1px 2px 1px rgba(0,0,0,.2);
 }
 
 .descriptioncontent {
@@ -129,23 +135,82 @@ body {
 
 .myprojectdescription {
     background-color: #EEEEEE;
+    margin: 0 5px 2.5% 5px;
     padding: 10px;
     width: 35%;
     font-size: 14px;
     -webkit-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.20);
-    box-shadow: 1px 1px 1px rgba(0,0,0,0.20);
+    box-shadow: 1px 2px 1px rgba(0,0,0,0.20);
 
 }
 
 .projectbox {
-    background-color: #089de3;
+    position: relative;
     color: #FFF;
-    padding: 10px;
-    margin: 0 0 15px 0;
+    padding: 0;
+    margin: 0 0 5% 0;
     width: 45%;
-    font-size: 14px;
+    font-size: 20px;
     -webkit-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
-    box-shadow: 1px 1px 1px rgba(0,0,0,.2);
+    box-shadow: 1px 2px 1px rgba(0,0,0,.2);
+}
+
+.colorbox {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background-color: #089de3;
+    opacity: 0.35;
+}
+
+.colorbox:hover {
+    opacity: 0.0;
+}
+
+.textincolorbox {
+    padding: 10px;
+    color: #FFFFFF;
+    opacity: 1.0;
+
+}
+
+.textprojectbox {
+    position:absolute;
+    top:4px;
+    left:8px;
+    color:#FFF;
+}
+
+.burger {
+    background-image: url("images/burger.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+
+}
+.beach {
+    background-image: url("images/beach.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+
+}
+.computer {
+    background-image: url("images/computertable.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+
+}
+
+.coffee {
+    background-image: url("images/mug.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+
 }
