Fixed a single line. Really, I pushed this.

--- a/portfolio/main.css
+++ b/portfolio/main.css
@@ -9,7 +9,8 @@ body {
     background: -moz-linear-gradient(45deg, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%);
     background: -webkit-linear-gradient(45deg, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
     background: linear-gradient(45deg, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=1 );    font-family: 'Bitter', serif;
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=1 );
+    font-family: 'Bitter', serif;
     background-repeat: no-repeat;
     background-size: length;
 
