--- a/bt-portfolio/main.css
+++ b/bt-portfolio/main.css
@@ -42,7 +42,7 @@ body, html {
     background-color: #EEEEEE;
     -webkit-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
-    box-shadow: 1px 2px 1px rgba(0,0,0,.2);
+    box-shadow: 2px 2px 1px rgba(0,0,0,.2);
     padding-top:10px;
     min-height: 800px;
 
@@ -61,16 +61,24 @@ body, html {
     background-color: red;
     height: 300px;
 }
-
+.projectcontainer {
+    background-color: #EEEEEE;
+}
 .projectbox {
     position: relative;
     color: #FFF;
     padding: 0;
     margin: 0;
     height: 400px;
-    border: 1px solid black;
-}
+    border: 0.5px solid black;
+    -webkit-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 4px 14px 0px rgba(0,0,0,0.75);
+    box-shadow: 1px 1px 1px rgba(0,0,0,.2);
 
+}
+.buttonbox {
+    margin: 13px;
+}
 .colorbox {
     width: 100%;
     height: 100%;
@@ -79,7 +87,7 @@ body, html {
     border: 0;
     background-color: #089de3;
     opacity: 0.25;
-    transition: all 0.15s;
+    transition: all 0.20s;
 }
 
 .colorbox:hover {
