--- a/bt-portfolio/main.css
+++ b/bt-portfolio/main.css
@@ -173,7 +173,7 @@ body, html {
 }
 
 .resumenavbox {
-    background-image: url("images/paper.jpg");
+    background-image: url("images/paper-small.jpg");
     background-size: cover;
     background-position: center;
 
