--- a/bt-portfolio/main.css
+++ b/bt-portfolio/main.css
@@ -67,139 +67,145 @@ body, html {
 .left-box-shadow {
     box-shadow: -1px 1px 1px rgba(0,0,0,.2);
 }
-@media screen and (max-width: 992px) {
-
-    .projectbox {
-       height: 200px;
-    }
-
-}
 .buttonbox {
-    margin: 13px;
+margin: 13px;
 }
 .colorbox {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    background-color: #111;
-    opacity: 0.35;
-    transition: all 0.20s;
+width: 100%;
+height: 100%;
+margin: 0;
+padding: 0;
+border: 0;
+background-color: #111;
+opacity: 0.35;
+transition: all 0.20s;
 }
 
 .indexbox {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    background-color: #111;
-    opacity: 0.35;
-    transition: all 0.20s;
+width: 100%;
+height: 100%;
+margin: 0;
+padding: 0;
+border: 0;
+background-color: #111;
+opacity: 0.35;
+transition: all 0.20s;
 }
 
 .colorbox:hover {
-    opacity: 0.0;
+opacity: 0.0;
 }
 
 .indexbox:hover {
-    opacity: 0.0;
+opacity: 0.0;
 }
 
 .indexanchor {
-    display: block;
-    height: 100%;
-    width: 100%;
-    cursor: default;
+display: block;
+height: 100%;
+width: 100%;
+cursor: default;
 }
 .textprojectbox {
-    position:absolute;
-    top:4px;
-    left:8px;
-    color:#FFF;
-    font-size: 16px;
+position:absolute;
+top:4px;
+left:8px;
+color:#FFF;
+font-size: 16px;
 }
 
 .burger {
-    background-image: url("images/portfolio.jpg");
-    background-size: cover;
+background-image: url("images/portfolio.jpg");
+background-size: cover;
 
 
 
 }
 .beach {
-    background-image: url("images/beach.jpg");
-    background-size: cover;
+background-image: url("images/beach.jpg");
+background-size: cover;
 
 
 
 }
 .computer {
-    background-image: url("images/computertable.jpeg");
-    background-size: cover;
+background-image: url("images/computertable.jpeg");
+background-size: cover;
 
 
 
 }
 
 .coffee {
-    background-image: url("images/mug.jpg");
-    background-size: cover;
+background-image: url("images/mug.jpg");
+background-size: cover;
 
 
 
 }
 
 .aboutnavbox {
-    background-image: url("images/mug.jpg");
-    background-size: cover;
+background-image: url("images/mug.jpg");
+background-size: cover;
 
 }
 
 .projectnavbox {
-    background-image: url("images/computertable.jpeg");
-    background-size: cover;
+background-image: url("images/computertable.jpeg");
+background-size: cover;
 }
 
 .resumenavbox {
-    background-image: url("images/paper-small.jpg");
-    background-size: cover;
-    background-position: center;
+background-image: url("images/paper-small.jpg");
+background-size: cover;
+background-position: center;
 
 }
 .contactmenavbox {
-    background-image: url("images/contact.jpg");
-    background-size: cover;
-    background-position: center;
+background-image: url("images/contact.jpg");
+background-size: cover;
+background-position: center;
 
 }
 
 .mypic {
-    image-size: cover;
+image-size: cover;
 }
 
 .mypic-cont {
-    display: flex;
-    justify-content: center;
+display: flex;
+justify-content: center;
 
 }
 .profpic {
 
-    height: 250px;
+height: 250px;
 
 
 
 }
 .profilepic {
 
-    box-shadow: 1px 1px 1px 1px black;
-    border-radius: 50%;
+box-shadow: 1px 1px 1px 1px black;
+border-radius: 50%;
 }
 .testfill {
-    height: 100%;
+height: 100%;
 }
 
 .dl-button {
-    margin-right: 10px;
+margin-right: 10px;
+}
+@media screen and (max-width: 992px) {
+
+    .projectbox {
+        height: 200px;
+    }
+    .profpic{
+        height: 150px;
+
+    }
+    .profilepic{
+        width: 150px;
+    }
 }
